k8s/api-deployment.yaml
#  k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-backend
  template:
    metadata:
      labels:
        app: api-backend
    spec:
      imagePullSecrets:
        - name: acr-secret

      containers:
        - name: api-container
          image: mindxregistryhai01.azurecr.io/my-api-image:v11
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"

          # --- THÊM PHẦN CẤU HÌNH BIẾN MÔI TRƯỜNG VÀ KHẮC PHỤC SSL TẠI ĐÂY ---
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          # ----------------------------------------
