k8s/web-deployment.yaml
# k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      # --- [QUAN TRỌNG] THÊM ĐOẠN NÀY ĐỂ MỞ KHÓA KHO MỚI ---
      imagePullSecrets:
        - name: acr-secret
      # -----------------------------------------------------

      containers:
        - name: web-app
          # Cập nhật tên kho mới và tên ảnh bạn vừa push
          image: mindxregistryhai01.azurecr.io/my-frontend-image:v5
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
