k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  selector:
    app: api-backend
  ports:
    - port: 3000 # <--- SỬA THÀNH 3000 (Để khớp với Ingress Backend)
      targetPort: 3000 # Port thật của Container
