k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
    - protocol: TCP
      # Bên ngoài nhìn vào thấy cổng 8080 (Đúng Architecture)
      port: 8080
      # Bên trong chuyển tiếp vào cổng 3000 (Đúng thực tế Image của bạn)
      targetPort: 3000
